--- a/wercker.yml
+++ b/wercker.yml
@@ -23,7 +23,7 @@ deploy-accs:
         opc_password: $OPC_PASSWORD
         rest_url: $REST_URL
         domain: $IDENTITY_DOMAIN
-        application_name: springboot-accs-demo
+        application_name: springbootaccsdemo
         application_type: java
         file: springbootdemo-0.0.1.zip
      
